--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.3"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
